# tensile

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: spec.md
src/tensile/: cli.py  paths.py
src/tensile/features/: build_features.py  code_stats.py
src/tensile/graph/: build_includes.py  io.py  metrics.py
src/tensile/history/: git_mine.py  labels.py
src/tensile/risk/: evaluate.py  explain.py  report.py  report_md.py  train.py
